# FDMCTree

./: CMakeLists.txt  config.cpp  config.h  config.yaml  fdmcts.cpp  fdmcts.h  functions.cpp  functions.h  gaussian_sampler.h  logger.h  main.cpp  mulitvariate_normal_eigen.h  sys_sim.cpp  sys_sim.h  trajects.cpp  trajects.h  tree_util.h
Jupyter_stuff/: Untitled.ipynb  visualize_data.ipynb
Jupyter_stuff/.ipynb_checkpoints/: visualize_data-checkpoint.ipynb
grid_python/: grid.csv  grid.py
grid_python/60x100/: 60x100_complicated_3borders.csv  60x100_scene1.csv
grid_python/60x60/: 60x60_ocup_grid.csv  grid_60x60_frame.csv
src/: config.cpp  config.h  expert.cpp  expert.h  expertbase.h  functions.h  gaussian_sampler.h  impexp.cpp  impexp.h  impfunctions.cpp  impfunctions.h  main.cpp  mulitvariate_normal_eigen.h  node.cpp  node.h  normexp.cpp  normexp.h  occupancygrid.cpp  occupancygrid.h  sys_sim.cpp  sys_sim.h  trajects.cpp  trajects.h
testing_python_script/: main_experiment_scheduler.py  main_logger.py  plot_sequences.ipynb  plots.ipynb  pose_publisher.py  positions_ee.txt  positions_obstacle.txt  postprocess_logging.py  rostry_script.py  sequences_analysis.ipynb  testing_script.py  timing_analysis.ipynb  topic_logger.py  unify_data.ipynb
testing_python_script/.ipynb_checkpoints/: script_notebook-checkpoint.ipynb
